--- a/app/src/main/res/layout/activity_calculadora.xml
+++ b/app/src/main/res/layout/activity_calculadora.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_calculadora"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CalculadoraActivity">
+    tools:context=".calculadora.view.CalculadoraActivity">
 
     <TextView
-        android:id="@+id/calculadora_valor"
+        android:id="@+id/calculadora_expressao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -30,11 +32,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="<"
-        app:layout_constraintBottom_toBottomOf="@+id/calculadora_valor"
+        android:text="Apagar"
+        app:layout_constraintBottom_toBottomOf="@+id/calculadora_expressao"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/calculadora_valor"
-        app:layout_constraintTop_toTopOf="@+id/calculadora_valor" />
+        app:layout_constraintStart_toEndOf="@+id/calculadora_expressao"
+        app:layout_constraintTop_toTopOf="@+id/calculadora_expressao" />
 
     <Button
         android:id="@+id/calculadora_botao_mais"
@@ -94,8 +96,8 @@
         android:text="7"
         app:layout_constraintEnd_toStartOf="@+id/calculadora_botao_oito"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="@+id/calculadora_valor"
-        app:layout_constraintTop_toBottomOf="@+id/calculadora_valor"
+        app:layout_constraintStart_toStartOf="@+id/calculadora_expressao"
+        app:layout_constraintTop_toBottomOf="@+id/calculadora_expressao"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
@@ -186,6 +188,5 @@
         app:layout_constraintEnd_toEndOf="@+id/calculadora_botao_dois"
         app:layout_constraintStart_toStartOf="@+id/calculadora_botao_um"
         app:layout_constraintTop_toBottomOf="@+id/calculadora_botao_um" />
-
 
 </android.support.constraint.ConstraintLayout>
